Fixing h2 left-alignment

--- a/play.css
+++ b/play.css
@@ -15,7 +15,7 @@ h1 {
 }
 
 h2 {
-    margin-left: 25px;
+    margin-left: 5px;
     font-family: 'Noto Sans', sans-serif;
     font-weight: bolder;
     font-size: 22px;
